--- a/MilkyTracker.html
+++ b/MilkyTracker.html
@@ -5,10 +5,10 @@
 		<meta charset="UTF-8">
 		<style>
 			html {
+				color-scheme: light dark;
 				font-family: sans-serif, serif;
-				background-color: #fff;
-				color: #000;
 				scroll-behavior: smooth;
+				scroll-padding-top: 1rem;
 			}
 
 			body {
@@ -17,8 +17,7 @@
 			}
 
 			h1, h2, h3, h4 {
-				margin: 0;
-				margin-bottom: 1em;
+				margin: 1em 0;
 				padding: 0;
 				text-decoration: underline;
 			}
@@ -63,6 +62,9 @@
 
 			tr:nth-child(odd) {
 				background-color: #eee;
+				@media (prefers-color-scheme: dark) {
+					background-color: #222;
+				}
  			}
 
 			td {
