small additions + added hr-tags to improve readability in milkytracker Help Dialog

--- a/MilkyTracker.html
+++ b/MilkyTracker.html
@@ -438,6 +438,7 @@
 			Notes: ADSR & panning envelopes are done in the Instrument Editor (check the volume envelope checkbox).
 		</p>
 
+		<hr/>
 		<h3 id="channels-and-scopes">Channels and Scopes</h3>
 		<p>
 			Milkytracker takes a revolutionary approach compared to a most midi samplers:
@@ -460,6 +461,7 @@
 		</ul>
 
 
+		<hr/>
 		<h3 id="resamplers">Resamplers</h3>
 		<p>
 			MilkyTracker offers various resampling options for module playback, rendering and sample processing. These are:
@@ -480,6 +482,7 @@
 			While the choice of resampler is a matter of personal taste, you should keep in mind that <em>Linear interpolation</em> represents the highest quality option available in Fasttracker II so that's what the majority of .XM files were probably made (to be played) with. Many chiptunes will however sound very muffled with interpolation because of their short samples and therefore relatively greater impact of interpolation. The Amiga modes are meant to be used with 4 channel .MODs only. <em>Precise Sinc</em> is a CPU killer - great for resampling in the sample editor but don't expect hot real-time performance.
 		</p>
 
+		<hr/>
 		<h3 id="volumeramping">Volume Ramping</h3>
 		<ol>
 			<li>None (not adviced: this can cause clicks)</li>
@@ -506,11 +509,13 @@
 			This is basically in the same category of 'the listener fixing the song' as surround sound, reverb, EQ in the player.
 		</p>
 
+		<hr/>
 		<h3 id="tabs">Tabs</h3>
 		<p>
 			MilkyTracker enables you to open and play up to 32 modules simultaneously and to exchange data between them. Initially, tabs are invisible but can be activated with <a href="#shortcuts">keyboard shortcuts</a> described below. There are some configurable options for tabs as well, like automatically opening modules in new tabs and background stopping behavior control. You can choose to never stop playback on background tabs, or to automatically stop on tab change or stop when playback on another tab is started. Playback can also resume upon returning to a tab.
 		</p>
 
+		<hr/>
 		<h2 id="formats">Imported and exported file formats</h2>
 		<h3 id="modules">Modules</h3>
 		<p>
@@ -628,6 +633,7 @@
 			</tr>
 		</table>
 
+		<hr/>
 		<h3 id="samples">Samples</h3>
 		<p>
 			Milky can load practically anything as RAW PCM audio samples; one of FT2's famous features.
@@ -657,12 +663,14 @@
 			</tr>
 		</table>
 
+		<hr/>
 		<h3 id="instruments">Instruments</h3>
 		<p>
 			MilkyTracker can load and save FT2's eXtended Instrument (<em>.XI</em>) format
 			and additionally import Gravis Ultrasound GF1 Patch (<em>.PAT</em>) files.
 		</p>
 
+		<hr/>
 		<h3 id="patterns">Patterns and Tracks</h3>
 		<p>
 			MilkyTracker handles FT2's eXtended Pattern (<em>.XP</em>) and eXtended Track (<em>.XT</em>) files with full compatibility.
@@ -717,8 +725,7 @@
 			</tr>
 		</table>
 
-		<hr>
-
+		<hr/>
 		<h3 id="milkymode">MilkyTracker edit mode</h3>
 		<p>
 			The MilkyTracker mode basically is a bit more "modern" because you can focus on different parts (e.g. Pattern Editor,
@@ -741,7 +748,8 @@
 
 		<p>
 			<a href="https://web.archive.org/web/20241226181409/https://gist.github.com/coderofsalvation/8d760b191f4bb5465c8772d5618e5c4b" target="_blank">ASCIISTEP16</a> is a pckeyboard standard & translation of popular hardware 16-step drum/midi/sampler-sequencers.
-			It adds a 'grid'-like keyboard-performancemode to trackers, which toggles pattern-notes/channels.
+			It adds a 'grid'-like keyboard-performancemode to trackers, which toggles pattern-notes/channels.<br>
+			In Milkytracker pressing SHIFT activates ASCIISTEP16-mode (pressing SHIFT+Q e.g.).
 		</p>
 		<p>
 		Below is the keyboard-to-step translation:
@@ -1180,6 +1188,7 @@
 		</table>
 
 
+		<hr/>
 		<h3 id="ft2mode">Fasttracker II edit mode</h3>
 		<p>
 			The FT2 edit mode is for the die-hard FT2 users and probably isn't very intuitive to beginners. <em>Please note</em> that not all FT2 shortcuts are implemented yet and some may differ for various technical reasons. <em>Also note</em> that this edit mode may not be optimal on Pocket PC because of the limitations of their input devices.
@@ -1614,6 +1623,7 @@
 			</tr>
 		</table>
 
+		<hr/>
 		<h2 id="effects">Effect command reference</h2>
 		<h3 id="glossary">Glossary</h3>
 		<table>
